docs/book/samples/ch05/dropped_check.out
error[unused]: unused binding `goodbye`
  --> dropped_check.kso:2:3
   2 |   goodbye = print "sayonara"
         ^
