docs/book/samples/ch05/dropped_check.kso
main =
  goodbye = print "sayonara"
  print "the goodbye never ran"
